<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:id="@+id/card"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/homeContent">

        <ImageView
            android:id="@+id/foodimg"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/food"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_fastfood_24" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/foodimg"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/foodnametxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/dish"
                android:textColor="#331612"
                android:textSize="20sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="@string/rs_200"
                    android:textColor="#331612"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/foodpricetxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="0"
                    android:textColor="#331612"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/fav"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/name"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_star_24" />

        <TextView
            android:id="@+id/foodrating"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:text="@string/_4_2"
            android:padding="10dp"
            android:textColor="#331612" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>